--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,10 @@ h1 {
    margin-top: 10%;
 }
 
+.emoji {
+    width: 10%;
+}
+
 
 #compliment {
   font-size: 30px;
@@ -66,4 +70,21 @@ a.social {
 
 a.social:hover {
   color: #F26A93;
+}
+
+
+@media only screen and (max-width: 500px) {
+
+  .emoji {
+    width: 50%;
+  }
+
+  #compliment {
+    max-height: 300px;
+  }
+
+  .footer {
+    margin-top: 30%;
+  }
+
 }
