--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:400,700);
-
 body {
   background: rgb(231, 35, 94);
   font-family: 'Roboto', sans-serif;
@@ -51,13 +49,13 @@ h1 {
   margin-top: 5%;
 }
 
-.goodbye, .copyright {
+.goodbye, #copyright {
   color: #fff;
   font-size: 14px;
   text-align: center;
 }
 
-.copyright {
+#copyright {
   font-size: 10px;
   margin-top: 15px;
 }
